<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInEmailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height"
        android:id="@+id/toolbarRl"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ToolbarBackbtn"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:contentDescription="@string/back_btn"
            android:layout_centerVertical="true"
            />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Log In" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray02"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRl"
        android:padding="10dp"

        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorGray01"
            android:src="@drawable/ic_person_white"
            app:shapeAppearanceOverlay="@style/ImageStyle_circle"
            android:id="@+id/profileIv"
            />

       <TextView
         android:id="@+id/LogInLabelTv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="LogIn to Your Account"
           style="@style/TextAppearance.MaterialComponents.Subtitle1"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="10dp"
           android:layout_below="@id/profileIv"

           />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LogInLabelTv"
            android:id="@+id/emailTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Email"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:startIconDrawable="@drawable/ic_email_white"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/emailEt"
                />


            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:id="@+id/PasswordTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:startIconDrawable="@drawable/ic_lock_white"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/passwordEt"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="7dp"
            android:layout_below="@+id/PasswordTil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/not_have_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPasswordTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/forget_password"
            android:layout_below="@+id/registerBtn"

            android:layout_marginTop="5dp"
            />

<com.google.android.material.button.MaterialButton
    android:id="@+id/logInBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="LogIn"
    app:cornerRadius="8dp"
    android:layout_alignParentBottom="true"
    android:minHeight="@dimen/m_button_height"
    />



    </RelativeLayout>



</RelativeLayout>